--- a/package.json
+++ b/package.json
@@ -149,16 +149,16 @@
 		"workspaceContains:.flake8"
 	],
 	"dependencies": {
-		"fs-extra": "^11.2.0"
+		"fs-extra": "11.2.0"
 	},
 	"devDependencies": {
 		"@playform/build": "0.0.7",
 		"@playform/document": "0.0.6",
-		"@types/fs-extra": "^11.0.4",
-		"@types/glob": "^8.1.0",
-		"@types/node": "16.x",
-		"glob": "^10.3.12",
-		"ts-loader": "^9.5.1"
+		"@types/fs-extra": "11.0.4",
+		"@types/glob": "8.1.0",
+		"@types/node": "20.x",
+		"glob": "10.3.12",
+		"ts-loader": "9.5.1"
 	},
 	"extensionDependencies": [
 		"ms-python.python"
